# intel-hex-annotate

./: .gitmodules  CMakeLists.txt  README.md
lib/hexdecoder/: CMakeLists.txt
lib/hexdecoder/include/: hexdecoder.h
lib/hexdecoder/src/: hexdecoder.cpp
lib/hexdecoder/tests/: hexdecoder_tests.cpp
src/: main.cpp  version.h.in
